# bloodwork

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: deploy.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements-docker.txt
backend/app/: config.py  db.py  main.py
backend/app/api/: analysis.py  annotations.py  auth.py  results.py  upload.py
backend/app/llm/: __init__.py  anthropic.py  attention.py  base.py  chat.py  deepseek.py  extractor.py  factory.py  openai.py  test_info.py
backend/app/models/: orm.py  schemas.py
backend/app/parsers/: __init__.py  base.py  pdf_llm.py
backend/app/services/: aggregator.py  auth.py  ingest.py  normalizer.py
backend/tests/: test_extractor_dates.py  test_normalizer.py
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  theme.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: Compare.tsx  Dashboard.tsx  Export.tsx  Graphics.tsx  Import.tsx  Markdown.tsx  SourceData.tsx  TableViewer.tsx  TestDetailModal.tsx
frontend/src/lib/: annotations.ts  data.ts  date.ts  health.ts  insights.ts  metrics.ts  panels.ts  pool.ts  useImportController.ts
frontend/src/types/: bloodwork.ts
